# profile.mobile.apps.native.message

./: .cproject  .gitignore  .project  CMakeLists.txt  message.efl.in  message.manifest-2.4.in  message.manifest-3.0.in  message.manifest.in  org.tizen.message-1.0.0-arm-debug.tpk  org.tizen.message-1.0.0-arm.tpk  org.tizen.message-1.0.0-arm_debug.tpk  org.tizen.message-1.0.0-i386.tpk  project.config  project_def.prop  run.sh  tizen-manifest-private.xml  tizen-manifest.xml
inc/: Config.h  Resource.h
packaging/: message.spec  org.tizen.message.spec
res/: CMakeLists.txt
res/edje/: bubble_genlist_theme.edc  bubble_theme.edc  button_theme.edc  colors_define.inl  contact_search.edc  conv_contact_list_layout.edc  conv_genlist_theme.edc  conv_label_theme.edc  conv_layout.edc  conv_list.edc  conv_list_attachments.edc  conv_list_bubble.edc  conversation.edc  icons.edc  image_macros.inl  images.edc  macros.inl  msg_body.edc  msg_input_panel.edc  msg_thread.edc  msg_thumbnail.edc  msg_title.edc  recipient_panel.edc  select_all.edc  smil_item.edc  thread_genlist_theme.edc  viewer_defines.inl  viewer_layout.edc  viewer_player.edc  viewer_subject_layout.edc
res/po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  (+35 more)
shared/res/po/: ar.po  bg.po  cs.po  da.po  el_GR.po  en_PH.po  es_ES.po  et.po  fi.po  fr_CA.po  ga.po  gl.po  hr.po  hu.po  hy.po  ka.po  kk.po  ko_KR.po  lv.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  sr.po  sv.po  tr_TR.po  zh_TW.po
src/Common/AppControl/inc/: AppControlCommand.h  AppControlCommandDefault.h  AppControlCommandMain.h  AppControlCompose.h  AppControlDefault.h  AppControlNewMessage.h  AppControlParser.h  AppControlUtils.h  ContactEditor.h  ContactViewer.h  FileShare.h  FileViewer.h  VoiceCall.h
src/Common/AppControl/src/: AppControlCommand.cpp  AppControlCommandDefault.cpp  AppControlCommandMain.cpp  AppControlCompose.cpp  AppControlDefault.cpp  AppControlNewMessage.cpp  AppControlParser.cpp  AppControlUtils.cpp  ContactEditor.cpp  ContactViewer.cpp  FileShare.cpp  FileViewer.cpp  VoiceCall.cpp
src/Common/ContactManager/inc/: Contact.h  ContactAddress.h  ContactList.h  ContactManager.h  ContactMyProfile.h  ContactMyProfileEmail.h  ContactMyProfileNumber.h  ContactOwnerProfile.h  ContactPersonAddress.h  ContactPersonEmail.h  ContactPersonNumber.h  ContactPersonPhoneLog.h  ContactRecord.h
src/Common/ContactManager/src/: ContactManager.cpp  ContactRecord.cpp  ContactVCardGenerator.cpp  ContactVCardParser.cpp  VcfGenerator.cpp
src/Common/Controller/inc/: App.h  BaseController.h  FrameController.h  MbeRecipients.h  NaviFrameController.h  SaveAttachmentsPopup.h  ViewController.h  ViewItemController.h
src/Common/Controller/src/: App.cpp  BaseController.cpp  FrameController.cpp  MbeRecipients.cpp  NaviFrameController.cpp  SaveAttachmentsPopup.cpp  ViewController.cpp  ViewItemController.cpp
src/Common/MsgEngine/inc/: MediaType.h  Message.h  MessageMms.h  MessageSMS.h  MsgAddress.h  MsgAttachment.h  MsgComposer.h  MsgConvMedia.h  MsgConversationItem.h  MsgDataContainer.h  MsgEngine.h  MsgList.h  MsgMedia.h  MsgPage.h  MsgReport.h  MsgSettings.h  MsgStorage.h  MsgThreadItem.h  MsgTransport.h  MsgTypes.h  MsgUtils.h
src/Common/MsgEngine/src/: Message.cpp  MessageMms.cpp  MessageSMS.cpp  MsgConversationItem.cpp  MsgDataContainer.cpp  MsgEngine.cpp  MsgPage.cpp  MsgSettings.cpp  MsgStorage.cpp  MsgThreadItem.cpp  MsgTransport.cpp  MsgUtils.cpp
src/Common/SystemSettingsManager/inc/: SystemSettingsManager.h
src/Common/SystemSettingsManager/src/: SystemSettingsManager.cpp
src/Common/Utils/inc/: CalendarVCardParser.h  CallbackAssist.h  FileUtils.h  HwButtonListener.h  LangUtils.h  Logger.h  LoggerImpl.h  MediaUtils.h  PathUtils.h  PhoneNumberUtils.h  ResourceUtils.h  TextDecorator.h  ThumbnailMaker.h  TimeUtils.h  VCalendarParser.h  VCardParser.h
src/Common/Utils/src/: CalendarVCardParser.cpp  FileUtils.cpp  HwButtonListener.cpp  LoggerImpl.cpp  MediaUtils.cpp  PathUtils.cpp  PhoneNumberUtils.cpp  ResourceUtils.cpp  TextDecorator.cpp  ThumbnailMaker.cpp  TimeUtils.cpp  VCalendarParser.cpp  VCardParser.cpp
src/Common/View/inc/: BaseView.h  Box.h  ContextPopup.h  DefaultLayout.h  ListItem.h  ListView.h  MbeRecipientViewItem.h  MbeRecipientsView.h  NaviFrameItem.h  NaviFrameView.h  NoContentLayout.h  Popup.h  PopupAttachmentListItem.h  PopupList.h  PopupListItem.h  PopupManager.h  Scroller.h  SelectAllListItem.h  StandardWindow.h  View.h  ViewItem.h  Window.h
src/Common/View/src/: Box.cpp  ContextPopup.cpp  DefaultLayout.cpp  ListItem.cpp  ListView.cpp  MbeRecipientsView.cpp  NaviFrameItem.cpp  NaviFrameView.cpp  NoContentLayout.cpp  Popup.cpp  PopupAttachmentListItem.cpp  PopupList.cpp  PopupListItem.cpp  PopupManager.cpp  Scroller.cpp  SelectAllListItem.cpp  StandardWindow.cpp  View.cpp  ViewItem.cpp
src/Conversation/AppControl/inc/: ContactPicker.h  LaunchSettings.h
src/Conversation/AppControl/src/: AttachPanel.cpp  ContactPicker.cpp  LaunchSettings.cpp
src/Conversation/Controller/inc/: Body.h  ContactListItem.h  Conversation.h  Page.h  RecipientItem.h
src/Conversation/Controller/src/: Body.cpp  ContactListItem.cpp  Conversation.cpp  ConversationBubble.cpp  ConversationMsgInput.cpp  ConversationPredictSearch.cpp  ConversationRecipients.cpp  Page.cpp  RecipientItem.cpp
src/MainApp/: MainApp.cpp  MainApp.h  main.cpp
test/: CMakeLists.txt  ContactUtils.cpp  ReadMe.txt  TestContactManager.cpp  TestMsgUtils.cpp  TestTextDecorator.cpp  main.cpp  test_run.sh
test/TC/: ContactUtils.cpp  ContactUtils.h  TestAppControlUtils.cpp  TestContactManager.cpp  TestMessageSender.cpp  TestMsgUtils.cpp  TestTextDecorator.cpp  TestTimeUtils.cpp  main.cpp
test/thirdparties/gmock/gtest/src/: gtest-internal-inl.h
test/thirdparties/gmock/include/gmock/: gmock-generated-matchers.h  gmock-matchers.h
(+257 files in other folders)
